--- a/20221/src/eda.ipynb
+++ b/20221/src/eda.ipynb
@@ -33972,23 +33972,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12411</th>\n",
+       "      <td>175961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3368</th>\n",
+       "      <td>316346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10200</th>\n",
+       "      <td>395101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10559</th>\n",
+       "      <td>2246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11118</th>\n",
+       "      <td>24458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>486</th>\n",
+       "      <td>106688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3552</th>\n",
+       "      <td>45087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2579</th>\n",
+       "      <td>129155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7875</th>\n",
+       "      <td>92774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4526</th>\n",
+       "      <td>34193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12469</th>\n",
+       "      <td>177204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6393</th>\n",
+       "      <td>29918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3751</th>\n",
+       "      <td>142078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1649</th>\n",
+       "      <td>218989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4530</th>\n",
+       "      <td>65602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2813</th>\n",
+       "      <td>11007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8052</th>\n",
+       "      <td>39655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5266</th>\n",
+       "      <td>468282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2905</th>\n",
+       "      <td>29404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5312</th>\n",
+       "      <td>494062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6285</th>\n",
+       "      <td>41543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8365</th>\n",
+       "      <td>4365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4286</th>\n",
+       "      <td>20411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6200</th>\n",
+       "      <td>129112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6928</th>\n",
+       "      <td>252280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13005</th>\n",
+       "      <td>695530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6333</th>\n",
+       "      <td>22335</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4653</th>\n",
+       "      <td>23502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12001</th>\n",
+       "      <td>375086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6471</th>\n",
+       "      <td>27133</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "price    131209.287841\n",
-       "dtype: float64"
+       "        price\n",
+       "12411  175961\n",
+       "3368   316346\n",
+       "10200  395101\n",
+       "10559    2246\n",
+       "11118   24458\n",
+       "486    106688\n",
+       "3552    45087\n",
+       "2579   129155\n",
+       "7875    92774\n",
+       "4526    34193\n",
+       "12469  177204\n",
+       "6393    29918\n",
+       "3751   142078\n",
+       "1649   218989\n",
+       "4530    65602\n",
+       "2813    11007\n",
+       "8052    39655\n",
+       "5266   468282\n",
+       "2905    29404\n",
+       "5312   494062\n",
+       "6285    41543\n",
+       "8365     4365\n",
+       "4286    20411\n",
+       "6200   129112\n",
+       "6928   252280\n",
+       "13005  695530\n",
+       "6333    22335\n",
+       "4653    23502\n",
+       "12001  375086\n",
+       "6471    27133"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(model.predict(X_val).reshape(-1,1) - y_val).mean()"
+    "result = pd.DataFrame(abs(model.predict(X_val).reshape(-1,1) - y_val).astype(int))\n",
+    "result.head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1.254000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.312088e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.784537e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.246950e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7.257750e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.571168e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.234769e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              price\n",
+       "count  1.254000e+03\n",
+       "mean   1.312088e+05\n",
+       "std    1.784537e+05\n",
+       "min    1.000000e+00\n",
+       "25%    3.246950e+04\n",
+       "50%    7.257750e+04\n",
+       "75%    1.571168e+05\n",
+       "max    2.234769e+06"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.describe()"
    ]
   },
   {
@@ -34132,7 +34396,7 @@
     }
    ],
    "source": [
-    "pd.DataFrame(y_val).head()"
+    "pd.DataFrame(y_val).head(10)"
    ]
   },
   {
@@ -34171,9 +34435,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = '/Users/charles/Desktop/iFixerup/zr1/submission/final_catboost_ensemble_x8.csv'\n",
-    "file_name = \"/Users/charles/Desktop/DSAI/6_DataScience/project/DSP/20221/data/final_catboost_ensemble_x20-1050.csv\"\n",
-    "submission, pred_2016, pred_2017 = catboost_mod.predict_and_export(models, features_2016, features_2017, file_name)"
+    "#file_name = \"/Users/charles/Desktop/DSAI/6_DataScience/project/DSP/20221/data/final_catboost_ensemble_x20-1050.csv\"\n",
+    "#submission, pred_2016, pred_2017 = catboost_mod.predict_and_export(models, features_2016, features_2017, file_name)"
    ]
   }
  ],
