pre-final catboost

--- a/20221/src/eda.ipynb
+++ b/20221/src/eda.ipynb
@@ -33944,7 +33944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -33973,6 +33973,26 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>1626</th>\n",
+       "      <td>63520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9361</th>\n",
+       "      <td>33737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12787</th>\n",
+       "      <td>69375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7825</th>\n",
+       "      <td>141370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7098</th>\n",
+       "      <td>94205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>11704</th>\n",
        "      <td>65142</td>\n",
        "    </tr>\n",
@@ -33998,6 +34018,11 @@
       ],
       "text/plain": [
        "        price\n",
+       "1626    63520\n",
+       "9361    33737\n",
+       "12787   69375\n",
+       "7825   141370\n",
+       "7098    94205\n",
        "11704   65142\n",
        "3533    88086\n",
        "6400   172994\n",
@@ -34005,14 +34030,14 @@
        "3291    20616"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = pd.DataFrame(abs(model.predict(X_val).reshape(-1,1) - y_val).astype(int))\n",
-    "result.tail()"
+    "result.tail(10)"
    ]
   },
   {
