--- a/20221/src/feature_process.ipynb
+++ b/20221/src/feature_process.ipynb
@@ -342,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -356,12 +356,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "618af10fdd433c84be79e5d9cef7a85d74ad68be7e2e9dd9461a47b527f16862"
+    "hash": "19258ef9c68e9c5362f0245e41ec7b89e9a851fe6202f4986c56aee02c8680ae"
    }
   }
  },
